[package]
name = "rustyprocdump"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.

[profile.dev]

[[bin]]
name = "rustyprocdump"
path = "src/procdump.rs"

[dependencies]
nix = "0.25.0"
chrono = "0.4.22"
sysinfo = "0.26.4"

